# lit-review-agent

./: .gitignore  README.md  fetch_papers.py  lit_review_policy.py  pyproject.toml
literature/: policy.json
src/: full_pipeline.py  models.py  paper_processing.py  policy_engine.py  report_generation.py  utils.py
