[tool.poetry]
name = "lit-review-agent"
version = "0.1.0"
description = ""
authors = ["Kartik Thakore <kartik@thakore.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.51.2"
pydantic = "^2.9.2"
pymupdf = "^1.24.11"
pandas = "^2.2.3"
paperscraper = "^0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
